examples/test/testpolicy16737.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16737
  namespace: namespace412
spec:
  podSelector:
    matchLabels:
      key37: value18
      key22: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value0
      podSelector:
        matchLabels:
          key12: value8
          key32: value22
          key9: value19
